engine-net-2/examples/Errors/SequenceParametersOutNumberMismatch.grs
new graph "Rules.grg"

exec (n:N)=init ;> (m:M,o:O)=s(n)

quit
